--- a/kj_app/pubspec.yaml
+++ b/kj_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: kj_app
+name: kjapp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,32 +27,62 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^3.5.1
+  google_sign_in: ^5.0.7
+  provider: ^6.0.0
+  animated_text_kit: ^4.2.1
+  photo_manager: ^1.3.7
+  curved_navigation_bar: ^1.0.1
   animated_splash_screen: ^1.1.0
+  lottie: ^1.2.1
   adobe_xd: ^2.0.0+1
-  flutter_launcher_icons: ^0.9.2
+  font_awesome:
+  line_icons:
+  font_awesome_flutter: ^8.8.1
+  location: ^4.1.1
+  geocoder: ^0.2.1
+  uuid: ^3.0.1
+  firebase_storage: ^8.0.0
+  cloud_firestore: ^1.0.1
+  image_picker: ^0.7.2+1
+  screenshot: ^1.2.3
+  share: ^2.0.4
+  path_provider: ^2.0.5
+  get: ^4.3.8
+  lite_rolling_switch: ^0.1.1
+  rounded_loading_button: ^2.0.8
   
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
-  device_preview: ^0.7.1
+  # flutter_launcher_icons: ^0.9.2
+
+
 
 dependency_overrides:
 flutter_svg: 0.18.0
 
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+  flutter_launcher_name: "^0.0.1"
+
+
+flutter_launcher_name:
+  name: "kjapp"
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.4
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +96,35 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/fb.png
+    - assets/google.png
+    - assets/google_tra.png
+    - assets/twitter_tra.png
+    - assets/facebook_tra.png
+    - assets/facebook1.png
+    - assets/globaldesign.png
+    - assets/74423-photography.json
+    - assets/main_actor.png
+    - assets/profile.png
+    - assets/buddha.jpg
+    - assets/insta.jpg
+    - assets/sad-removebg-preview.png
+    - assets/happy__2_-removebg-preview.png 
+    - assets/emotionally-stable.png
+    - assets/cultures.png
+    - assets/solid.png
+
+  fonts:
+    - family: Proxima
+      fonts:
+        - asset: fonts/Proxima-Nova-Black.otf
+        - asset: fonts/Proxima-Nova-Bold.otf
+        - asset: fonts/Proxima-Nova-ExtraBold.otf
+        - asset: fonts/Proxima-Nova-Thin.otf
+        - asset: fonts/ProximaNova-Regular.otf
+
+    
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
